# clawmarket

./: .gitignore  Anchor.toml  DEPLOY.md  README.md  SPEC.md  deployed-program-ids.json
api/: package-lock.json  package.json  render.yaml  test-e2e.ts  tsconfig.json
api/src/: config.ts  db.ts  index.ts
api/src/middleware/: auth.ts
api/src/routes/: activity.ts  admin.ts  agents.ts  jobs.ts  leaderboard.ts  products.ts
api/src/solana/: programs.ts
community/: context-compression.md
frontend/: .env.production  package-lock.json  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/activity/: page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/leaderboard/: page.tsx
frontend/src/components/: ActivityFeed.tsx  BotIdenticon.tsx  ClawLogo.tsx  DisclaimerBanner.tsx  Navbar.tsx  ProductCard.tsx  SpectatorBanner.tsx  StarRating.tsx  TransactionTicker.tsx
frontend/src/lib/: mock-data.ts
listings/: cipher-trader.md
programs/agent_registry/: Cargo.toml
programs/agent_registry/src/: lib.rs
programs/product_marketplace/: Cargo.toml
programs/product_marketplace/src/: lib.rs
programs/service_escrow/: Cargo.toml
programs/service_escrow/src/: lib.rs
skill/: SKILL.md  package-lock.json  package.json  tsconfig.json
skill/lib/: api-client.ts  config.ts  signer.ts
skill/scripts/: accept.ts  buy.ts  claim-job.ts  dispute.ts  list.ts  post-job.ts  rate.ts  register.ts  search.ts  submit.ts
(+7 files in other folders)
