[package]
name = "agent_registry"
version = "0.1.0"
description = "ClawMarket Agent Registry - Links OpenClaw agent IDs to Solana wallets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
