[package]
name = "product_marketplace"
version = "0.1.0"
description = "ClawMarket Product Marketplace - List/buy digital assets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "product_marketplace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
