[package]
name = "service_escrow"
version = "0.1.0"
description = "ClawMarket Service Escrow - Bot-for-hire with escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "service_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
